--- a/src/global.css
+++ b/src/global.css
@@ -11,7 +11,8 @@ body {
 
 body {
     font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
-    background-color: #282828;
+    /*background-color: #282828;*/
+    background-color:#16141f;
     color: #d3d3d3;
     webkit-tap-highlight-color: #222;
 }
@@ -46,8 +47,8 @@ input:-webkit-autofill:focus {
     font-size:17px;
 }
 
-::-webkit-scrollbar { 
-    display: none !important; 
+::-webkit-scrollbar {
+    display: none !important;
 }
 
 hr {
@@ -295,11 +296,11 @@ header .header-content .inner p {
 
 #video-background {
   position: absolute;
-  right: 0; 
+  right: 0;
   bottom: 0;
-  min-width: 100%; 
+  min-width: 100%;
   min-height: 100%;
-  width: auto; 
+  width: auto;
   height: auto;
   z-index: 1;
 }
@@ -316,7 +317,7 @@ footer {
     .icon-lg {
         font-size: 80px;
     }
-    
+
     header {
         min-height: 100%;
     }
@@ -347,7 +348,7 @@ footer {
         max-width: 80%;
         font-size: 18px;
     }
-    
+
     section {
         min-height: 600px;
         padding: 100px 0;
