Forum UI Updates
Keeping it simple. Forums shouldn't be flashy. That's where you go for
questions, it's not meant to be a big part of the site.

--- a/src/app/pages/forums/forum/forum.css
+++ b/src/app/pages/forums/forum/forum.css
@@ -47,9 +47,9 @@
 }
 
 #forumpage li.list-group-item {
-    background-color: #1D1D1D;
-    border: 1px solid rgb(149, 107, 185);
-} 
+    background-color: #0c0b11;
+    border: 1px solid rgba(149, 107, 185, 0.43);
+}
 .modal-dialog {
   width:70%;
 }
