--- a/src/app/pages/forums/forum/forum.html
+++ b/src/app/pages/forums/forum/forum.html
@@ -1,7 +1,7 @@
 <div id="forumpage">
-	<div class="container-fluid">
+	<div class="container">
 		<div class="col-lg-12">
-			<button type="button" style="border-color:rgb(149, 107, 185); border-radius:7px" class="btn btn-primary btn-md" data-toggle="modal" href="#forumPostModal">
+			<button type="button" style="border-color:rgba(149, 107, 185, 0.43); border-radius:7px" class="btn btn-primary btn-md" data-toggle="modal" href="#forumPostModal">
 				New Thread
 			</button>
 		</div>
@@ -56,12 +56,11 @@
 	                    </div>
 	                    <div class="col-md-12">
 	                        <label></label>
-	                        <!-- <textarea class="form-control" [(ngModel)]="body" rows="9" placeholder="Your message here.."></textarea> -->
 	                        <ckeditor
-							    [(ngModel)]="body"
-							    [config]="{toolbarCanCollapse: true}"
-							    debounce="500">
-							  </ckeditor>
+                            [(ngModel)]="body"
+                            [config]="{toolbarCanCollapse: true}"
+                            debounce="500">
+                          </ckeditor>
 	                    </div>
 	                    <div class="col-md-4 col-md-offset-4">
 	                        <label></label>
