--- a/src/app/pages/forums/forums.html
+++ b/src/app/pages/forums/forums.html
@@ -1,15 +1,28 @@
 
 <div id="forums">
 	<div class="container">
-		<div class="col-lg-6" *ngFor="let forum of forums" [ngStyle]="{'background': 'url(' + forum.image_url + ') cover'}">
-			<div class="panel panel-default" (click)="openForum(forum.ID)">
-			  <div class="panel-heading">
-			    <h3 class="panel-title">{{forum.name}}</h3>
-			  </div>
-			  <div class="panel-body">
-			    {{forum.description}}
-			  </div>
-			</div>
+		<div class="col-lg-6" *ngFor="let forum of forums">
+      <div class="panel panel-default" (click)="openForum(forum.ID)">
+        <div class="panel-heading">
+          <h3 class="panel-title">{{forum.name}}</h3>
+          {{forum.description}}
+        </div>
+        <div class="panel-body">
+          <div *ngIf="forum.latest_post.length > 0" (click)="openPost(forum.latest_post[0].ID, forum.ID)" data-toggle="modal" href="#forumModal">
+            <div class="media">
+              <div class="media-left media-middle">
+                <a href="#">
+                  <img class="media-object" src="{{forum.latest_post[0].IMAGE_URL}}" style="height:30px; width:auto; border-radius:50%;">
+                </a>
+              </div>
+              <div class="media-body">
+                <p class="media-heading">{{forum.latest_post[0].title || 'No Posts'}}  <small style="float:right;">{{forum.latest_post[0].timestamp | timeAgo}}</small></p>
+                <small>-{{forum.latest_post[0].AUTHOR}}</small>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 		</div>
 	</div>
 </div>
